base view fix. Search forms fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,12 @@ body{
 }
 
 nav{
-	height: 10px;
 	margin-left: 10px;
 	margin-right: 10px;
-	color: #d3f4c5;
+}
+
+.navbar {
+    z-index: 9999;
 }
 
 .profileThumbnail{
