--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,6 @@ nav{
 }
 
 
-
 .profileThumbnail{
 	height: 20px;
 	width: 20px;
@@ -18,6 +17,11 @@ nav{
 .showPhoto{
 	height: 120px;
 	width: 120px;
+}
+
+.pfphoto{
+	height: 250px;
+	width: 250px;
 }
 
 .smallPhoto{
