--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+@keyframes backgroundflash {
+    75% { opacity:1.0}
+    100% {opacity:0.0; display:none}
+}
+
+#flash {
+  background-color:green;
+  animation: backgroundflash 5s forwards;
+}
+
 body{
 	background-color: #d3d3d3;
 	font-family: 'Roboto', sans-serif; 
